--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 body {
     background-color: black;
+}
+
+
+.alpha {
     background-image: url("./assets/img/alpha.jpg");
     background-repeat: repeat;
     background-size: 300px;
