added options for updating material of meshes

--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,8 @@ button {
 [bottom-tooltip]:not([data-tooltip-persistent]):before {
     pointer-events: none;
 }
+
+
+.pointing {
+    cursor: pointer;
+}
