--- a/src/components/scene/Scene.css
+++ b/src/components/scene/Scene.css
@@ -133,8 +133,91 @@ input::-webkit-inner-spin-button {
 }
 
 .fovInp {
-    width: 50px !important;
+    width: 100px !important;
 }
-.fovInp::after {
-    content: "1";
+
+
+/* unstyle range slider for all browsers */
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+}
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+    background: transparent; 
+    border-color: transparent;
+    color: transparent;
+}
+
+
+/* style slider thumb */
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #ffffff;
+    cursor: pointer;
+    margin-top: -3px;
+    box-shadow: 1px 1px 3px #00000075;
+}
+input[type=range]::-moz-range-thumb {
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #ffffff;
+    cursor: pointer;
+}
+
+
+/* style slider track */
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: rgba(0, 0, 0, 0.3);
+}
+input[type=range]::-ms-fill-upper {
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: rgba(0, 0, 0, 0.3);
 }
