--- a/src/components/models/Popup.css
+++ b/src/components/models/Popup.css
@@ -23,10 +23,21 @@
 }
 
 
-.popupConfirm {
-    width: 100%;
-    height: 35px;
-    background-color: rgba(74, 228, 120, 0.2);
-    border-radius: 30px;
-    margin-top: 20px;
+.materialPopup input[type="color"] {
+    width: 100px;
+    height: 20px;
+    margin: 0px;
+}
+::-webkit-color-swatch {
+    border-color: transparent;
+}
+::-moz-color-swatch {
+    border-color: transparent;
+}
+
+
+.materialPopup input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    margin: 0px;
 }
