--- a/src/components/scene/Scene.css
+++ b/src/components/scene/Scene.css
@@ -34,7 +34,16 @@ canvas {
     display: flex;
     flex-direction: row;
     z-index: 1;
-    /* visibility: hidden; */
+}
+
+
+.toolBtnsContainer {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: flex;
+    flex-direction: row;
+    z-index: 1;
 }
 
 
@@ -45,7 +54,22 @@ canvas {
     right: 20px;
     z-index: 1;
     border-radius: 12px;
-    padding: 24px;
+    height: 60px;
+    width: 120px;
+    font-size: 14px;
+    line-height: 12px;
+}
+
+
+.addBtn {
+    background-color: black;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 1;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
     font-size: 14px;
     line-height: 12px;
 }
@@ -57,16 +81,27 @@ canvas {
     background-color: transparent;
     margin: 0px;
     padding: 0px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     margin-left: 10px;
-    border-radius: 8px;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.iconToggle img {
-    width: 20px;
-    height: 20px;
+.iconToggle path {
+    opacity: 0.5;
+}
+
+.iconToggle.tool {
+    margin-right: 4px;
+    margin-left: 0px;
+    border-radius: 50%;
+}
+.iconToggle.tool.active {
+    background-color: black;
+}
+.iconToggle.active path {
+    opacity: 1;
 }
 
 
@@ -92,6 +127,9 @@ input[type="color"] {
 .divider {
     width: 20px;
 }
+.dividerSmall {
+    width: 14px;
+}
 
 
 input[type="number"] {
@@ -109,7 +147,7 @@ input[type="number"] {
     font-weight: 600;
     -moz-appearance: textfield;
     display: block;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
 }
 
@@ -183,19 +221,19 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 10px;
     cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
 }
 
 input[type=range]::-moz-range-track {
     width: 100%;
     height: 10px;
     cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
 
@@ -208,16 +246,16 @@ input[type=range]::-ms-track {
     color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
 input[type=range]:focus::-ms-fill-lower {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
 }
 input[type=range]::-ms-fill-upper {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
 input[type=range]:focus::-ms-fill-upper {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
 }
