--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import "components/scene/colors";
+
+
 .App {
     width: 100vw;
     height: 100vh;
@@ -20,18 +23,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px 12px;
+    border-radius: 20px;
+    @include uiColor();
 }
 
 .rangeTrack {
-    width: 100px;
-    height: 12px;
-    background-color: grey;
+    width: 100%;
+    height: 20px;
     border-radius: 50px;
+    @include uiColor();
 }
 
 .rangeThumb {
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
-    background-color: white;
+    @include uiColorInv();
+    width: 14px;
+    height: 14px;
+    border-radius: 20px;
 }
